hphp/test/zend/bad/ext/standard/tests/math/log_error.php
<?php
log();
log(36,4,true);
log(36, -4);
?>
